--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,36 @@
 certifi==2021.10.8
 cycler==0.11.0
+dataclasses==0.6
+et-xmlfile==1.1.0
 fastremap==1.12.2
 fill-voids==2.0.2
 fonttools==4.28.2
+future==0.18.2
 imageio==2.12.0
+joblib==1.1.0
 kiwisolver==1.3.2
 matplotlib==3.5.0
 networkx==2.6.3
-numpy==1.17.2
+numpy==1.21.4
+openpyxl==3.0.9
 packaging==21.3
+pandas==1.3.4
 Pillow==8.4.0
 pydicom==1.3.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
+pytz==2021.3
 PyWavelets==1.1.1
 scikit-image==0.15.0
+scikit-learn==1.0.1
 scipy==1.3.1
 setuptools-scm==6.3.2
 SimpleITK==1.2.4
 six==1.16.0
+threadpoolctl==3.0.0
 tomli==1.2.2
-torch==1.10.0
-torchvision==0.11.1
+torch==1.8.0
+torchaudio==0.8.0
+torchvision==0.9.0
 tqdm==4.62.3
 typing_extensions==4.0.0
