--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.8
 cycler==0.11.0
 dataclasses==0.6
+dill==0.3.4
 et-xmlfile==1.1.0
 fastremap==1.12.2
 fill-voids==2.0.2
@@ -19,13 +20,17 @@ joblib==1.1.0
 kiwisolver==1.3.2
 Markdown==3.3.6
 matplotlib==3.5.0
+multiprocess==0.70.12.2
 networkx==2.6.3
 numpy==1.21.4
 oauthlib==3.1.1
 openpyxl==3.0.9
 packaging==21.3
 pandas==1.3.4
+pathos==0.2.8
 Pillow==8.4.0
+pox==0.3.0
+ppft==1.6.6.4
 protobuf==3.19.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
